# autox-ci

./: .gitignore  README.md  data_process.ipynb  pyproject.toml  run_tests.sh
.github/: pull_request_template.md
autox-benchmarks/: .gitignore  README.md  pyproject.toml  requirements-benchmark.txt
autox-benchmarks/automl_benchmark/: benchmark_run_metadata.py  cli.py  compare_s3.py  orchestrator.py  result_rows.py  s3_benchmark_upload.py  s3_client.py  s3_experiment_dedupe.py  s3_leaderboard_artifact.py
autox-benchmarks/autorag_benchmark/: config_loader.py  orchestrator.py  pattern_scores.py  pipeline_params.py  result_rows.py  s3_benchmark_upload.py  settings.py
autox-benchmarks/autorag_benchmark/datasets/: README.md  __init__.py  beir.py  document_formats.py  slidevqa.py
autox-benchmarks/benchmark_common/: ini_credentials.py  manifest.py  pipeline_compile.py  pipeline_run.py  run_state.py  yaml_io.py
autox-benchmarks/config/: benchmark.yaml
autox-benchmarks/scripts/: autorag_benchmark_orchestrator.py  benchmark_compare_app.py  benchmark_orchestrator.py  extract_pattern_scores.py  generate_rag_datasets.py  make_benchmark_sample.py
autox-benchmarks/templates/: benchmark.autorag.example.yaml  benchmark.smoke.example.yaml  credentials.example.ini  dataset_manifest.example.yaml
autox_benchmarks/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
autox_benchmarks/automl_benchmark/: __init__.py  benchmark_run_metadata.py  benchmark_summary.py  cli.py  compare_logic.py  compare_s3.py  config_loader.py  experiment_fingerprint.py  leaderboard_merge.py  orchestrator.py  pipeline_params.py  s3_benchmark_upload.py  s3_experiment_dedupe.py  settings.py
autox_benchmarks/autorag_benchmark/: __init__.py  cli.py  compare_logic.py  compare_s3.py  config_loader.py  orchestrator.py  pattern_scores.py  pipeline_params.py  result_rows.py  s3_benchmark_upload.py  s3_dataset_upload.py  settings.py  storage_buckets.py
autox_benchmarks/autorag_benchmark/datasets/: README.md  __init__.py  beir.py  document_formats.py  html_rag.py  mkqa_dataset.py  mlqa_dataset.py  nomiracl_dataset.py  open_ragbench.py
autox_benchmarks/benchmark_common/: __init__.py  credentials.py  ini_credentials.py  kfp_client.py  kubernetes_config.py  managed_pipelines.py  merge.py  metrics_extraction.py  mlflow_batch.py  mlflow_ingest.py  mlflow_settings.py  paths.py  pipeline_compile.py  pipeline_package_resolve.py  pipeline_run.py  pipeline_target_resolve.py  results_csv.py  run_timing.py  s3_client.py  s3_upload.py
autox_benchmarks/config/: benchmark.yaml  benchmark_autorag.yaml  benchmark_multilingual.yaml  dataset_manifest.yaml  dataset_manifest_autorag_base.yaml  dataset_manifest_multilingual.yaml
autox_benchmarks/docs/: s3-storage-schema.md
autox_benchmarks/scripts/: autorag_benchmark_orchestrator.py  autorag_compare_ui.py  benchmark_compare_app.py  benchmark_orchestrator.py  download_initial_datasets.py  extract_pattern_scores.py  generate_dataset_manifest.py  generate_rag_datasets.py  log_benchmark_mlflow.py  merge_benchmark_leaderboards.py  summarize_benchmark_results.py
autox_benchmarks/templates/: benchmark.autorag.example.yaml  benchmark.example.yaml  benchmark.smoke.example.yaml  credentials.example.ini  dataset_manifest.autorag.example.yaml  dataset_manifest.smoke.yaml
autox_benchmarks/tests/: conftest.py  test_automl_cli.py  test_automl_orchestrator_dry_run.py  test_automl_package_resolve.py  test_automl_pipeline_params.py  test_automl_pipeline_run.py  test_autorag_storage_buckets.py  test_benchmark_orchestrator_script.py  test_compare_logic.py  test_credentials_env.py  test_managed_pipelines.py  test_mlflow_ingest.py
autox_benchmarks/tests/fixtures/automl/: benchmark.env  benchmark.yaml  dataset_manifest.yaml
autox_benchmarks/tests/fixtures/automl/integration/: benchmark.yaml  breast-w_n200.csv  dataset_manifest.smoke.yaml
autox_benchmarks/tests/integration/: README.md  conftest.py  test_automl_online.py
autox_ci.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
autox_tests/: .env.example  .env.ml.example  .env.rag.example  README.md  __init__.py  conftest.py  what_was_done.md
autox_tests/automl/: __init__.py  conftest.py  test_tabular_functional.py  test_timeseries_functional.py  utils.py
autox_tests/automl/configs/: configs.py  tabular_test_configs.json  timeseries_test_configs.json
autox_tests/automl/functional/: __init__.py  conftest.py  test_tabular_functional.py  test_timeseries_functional.py  utils.py
autox_tests/automl/scenarios/: __init__.py  (+3 more)
autox_tests/autorag/: README.md  __init__.py  conftest.py  response_validation.py  test_pipeline_functional.py  test_response_validation.py  utils.py
autox_tests/lib/: __init__.py  clients.py  config_loaders.py  data_resolution.py  dspa_support.py  env.py  integration_failures.py  k8s_utils.py  kfp_negative.py  kfp_progress.py  kfp_run_state.py  managed_pipelines.py  pipeline_yaml_sources.py  pytest_terminal.py  rhoai_support.py  s3_data.py  settings.py
autox_tests/scenarios/: _deprecated_test_autorag_rhoai.py  conftest.py
e2e-tests/: .env.example
e2e-tests/config/: automl_tabular_test_configs.json  automl_timeseries_test_configs.json
e2e-tests/lib/: config_loaders.py  data_resolution.py  env.py  integration_failures.py  kfp_negative.py  kfp_progress.py  pipeline_yaml_sources.py  s3_data.py  settings.py
e2e-tests/scenarios/: conftest.py  test_automl_tabular_rhoai.py  test_automl_timeseries_rhoai.py  test_autorag_rhoai.py  test_pipeline_negative_rhoai.py
(+31 files in other folders)
