[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autox-ci"
version = "0.1.0"
description = "OpenShift AI / Kubeflow Pipelines end-to-end integration tests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pytest>=7.0",
  "kubernetes>=28.0",
  "boto3>=1.28",
  "kfp>=2.5.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# Same runtime stack as `dependencies`; kept so `pip install -e ".[test_rhoai]"` / `test_automl` match docs.
test_rhoai = []
test_automl = []
test_autorag = [
  "nbformat",
  "notebook",
  "papermill",
]

[tool.setuptools]
package-dir = { autox_tests = "autox_tests" }
packages = ["autox_tests", "autox_tests.lib"]

[tool.pytest.ini_options]
testpaths = [
  "autox_tests/scenarios",
  "autox_tests/automl/scenarios",
  "autox_tests/automl/functional",
  "autox_tests/autorag/functional",
]
markers = [
  "integration: integration tests hitting live cluster/APIs",
  "openshift_ai: OpenShift AI / RHOAI scenarios",
  "pipeline_negative: tests that expect pipeline failure or rejection",
  "tabular: tabular AutoML family",
  "timeseries: time series AutoML family",
  "autorag: AutoRAG pipeline family",
  "functional: functional tests with artifact validation and notebook execution",
]
