[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-benchmarks"
version = "0.1.0"
description = "KFP benchmark orchestration for AutoML (AutoGluon) and AutoRAG pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kfp>=2.8.0,<3",
    "boto3>=1.34.0,<2",
    "PyYAML>=6.0",
    "pandas>=2.0",
    "lxml>=5.0,<6",
    "kubernetes>=28.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
compare = ["streamlit>=1.30", "plotly>=5.18"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: online tests against real KFP/S3 (run via pytest tests/integration/)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["automl_benchmark*", "autorag_benchmark*", "benchmark_common*"]
